--- a/mealsApp/package.json
+++ b/mealsApp/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "expo": "~52.0.38",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -19,7 +20,8 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
